--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>cwgpapi</artifactId>
 <!--	<artifactId>purwar</artifactId>-->
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+<!--	<packaging>war</packaging>-->
 	<name>CwRestAPI</name>
 	<description>RestAPI for CW</description>
 	<properties>
